src/ja/2.7/manuals/organization_management/notification.rst
========
通知管理
========

はじめに
========

| 本書では、Exastro システム における 通知管理 について説明します。

.. _notification_management:

通知先設定の登録
================

| 通知管理では、IT AutomationやOASEで利用するイベントごとの通知を受け取るための設定を行うことが出来ます。

.. _notification_entry:

通知先設定の登録手順
--------------------

| 通知先設定は、下記の手順で行ないます。

#. | Exastro システムにオーガナイゼーション管理者でログインします。

#. | メニューより :menuselection:`通知管理` をクリックします。

   .. figure:: /images/ja/manuals/platform/platform_menu.png
      :width: 200px
      :align: left

   .. note:: | OASE機能について
      | OASE機能の詳細につきましては :doc:`../oase/oase_common` をご参照ください。

#. | :menuselection:`通知先ワークスペース一覧` 画面が表示されるので、通知先設定を行いたいワークスペースを選択、または :guilabel:`通知先設定` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先ワークスペース一覧画面.png
      :width: 600px
      :align: left

   .. note:: | アクセス権限のあるワークスペースのみ表示されます。


#. | :menuselection:`通知先設定一覧` 画面が表示されるので、 :guilabel:`作成` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定一覧画面.png
      :width: 600px
      :align: left

#. | :menuselection:`新規通知先設定` 画面が表示されるので、通知先の情報を入力し、 :guilabel:`登録` をクリックします。

   - 新規通知先設定画面（共通部、送信設定）

     .. figure:: /images/ja/manuals/platform/notification/新規通知先設定画面_共通_v2-7.png
        :width: 600px
        :align: left

     .. list-table:: 新規通知先設定登録 - 共通部、送信設定
        :widths: 30 70
        :header-rows: 1
        :align: left

        * - 項目名
          - 説明
        * - 通知先ID
          - | 通知先に割り当てる一意のIDを指定します。
            | ここで指定した ID を使ってシステム間の連携を行います。
            | 初期値として自動的にIDが付与されます。
        * - 通知先名
          - | 通知先に割り当てる名前を指定します。
        * - 通知方法
          - | 通知方法を指定します。
            | 選択した通知方法に応じて、以下の各設定項目が表示されます。
        * - 送信設定
          - | OASEで利用できるイベント種別ごとの通知有無を選択します。



   |

   - 通知方法がMailの時の画面

     .. figure:: /images/ja/manuals/platform/notification/新規通知先設定画面_Mail_v2-7.png
        :width: 600px
        :align: left

     .. list-table:: 新規通知先設定登録 - Mail
        :widths: 20 80
        :header-rows: 1
        :align: left

        * - 項目名
          - 説明
        * - | 通知先(to, cc, bcc)
          - | Mailで通知するメールアドレスを指定します。

   |

   - 通知方法がTeams(Workflows)の時の画面

     .. figure:: /images/ja/manuals/platform/notification/新規通知先設定画面_TeamsWF_v2-7.png
        :width: 600px
        :align: left

     .. list-table:: 新規通知先設定登録 - Teams(Workflows)
        :widths: 30 70
        :header-rows: 1
        :align: left

        * - 項目名
          - 説明
        * - 通知先(URL)
          - | Teamsのワークフローの「Webhook要求を受信するとチャネルに投稿する」で発行したURLを指定します。

   |

   - 通知方法がWebhookの時の画面

     .. figure:: /images/ja/manuals/platform/notification/新規通知先設定画面_Webhook_v2-7.png
        :width: 600px
        :align: left

     .. list-table:: 新規通知先設定登録 - Webhook
        :widths: 30 70
        :header-rows: 1
        :align: left

        * - 項目名
          - 説明
        * - 通知先(URL)
          - | Webhookを送信するURLを指定します。
        * - 通知先(Header)
          - | Webhookを送信する際のHTTP HeaderをJSON形式で指定します。

   |

   - 通知方法がServiceNow(レコード登録)の時の画面

     .. figure:: /images/ja/manuals/platform/notification/新規通知先設定画面_ServiceNow_v2-7.png
        :width: 600px
        :align: left

     .. list-table:: 新規通知先設定登録 - ServiceNow(レコード登録)
        :widths: 30 70
        :header-rows: 1
        :align: left

        * - 項目名
          - 説明
        * - 通知先(ServiceNow API URL (個別登録用))
          - | ServiceNow テーブルAPIのURLを入力します。
        * - 通知先(ServiceNow ユーザー)
          - | ServiceNowに送信する際のユーザーを指定します。
        * - 通知先(ServiceNow パスワード)
          - | ServiceNowに送信する際のユーザーパスワードを指定します。
        * - 通知先(一括登録)
          - | バッチAPIを利用して一括で登録を行いたい場合は「一括登録」にチェックを入れます。
        * - 通知先(ServiceNow API URL (一括登録用))
          - | ServiceNow バッチAPIのURLを入力します。
        * - 通知先(送信間隔 (秒))
          - | 一括登録を実行する間隔を指定します。ここで指定した秒数毎にバッチAPIがコールされます。
        * - 通知先(一回に送信する最大件数)
          - | 一括登録を実行する際に送信されるメッセージの最大件数を指定します。

   |

   .. tip:: | 通知のテンプレートについて
      | ServiceNow (レコード登録)の通知方法を利用する場合は、テンプレートのフォーマット調整が必須です。
      | 通知のテンプレートについては、 :ref:`notification_template_common` を参照してください。
      | 設定変更、設定例については、 :ref:`notification_template_sample_servicenow_register` を参照してください。

   | 
   | 送信設定で選択可能なイベント種別とタイミングは :ref:`こちら<oase_event_category>` を参照してください。

通知先設定の詳細確認
--------------------

| 通知先設定の詳細確認は、下記の手順で行ないます。

#. | Exastro システムにオーガナイゼーション管理者でログインします。

#. | メニューより :menuselection:`通知管理` をクリックします。

   .. figure:: /images/ja/manuals/platform/platform_menu.png
      :width: 200px
      :align: left

#. | :menuselection:`通知先ワークスペース一覧` 画面が表示されるので、通知先設定の詳細確認を行いたいワークスペースを選択、または :guilabel:`通知先設定` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先ワークスペース一覧画面.png
      :width: 600px
      :align: left

   .. tip:: | アクセス権限のあるワークスペースのみ表示されます。

#. | :menuselection:`通知先設定一覧` 画面が表示されるので、詳細確認を行いたい通知先設定をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定一覧_v2-7.png
      :width: 600px
      :align: left

#. | :menuselection:`通知先設定詳細` 画面が表示されます。
   | 詳細確認の他、編集、削除、通知テストが実施できます。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定詳細画面_v2-7.png
      :width: 600px
      :align: left

   .. tip::
      | 通知テストについて
      | 登録されている通知先設定の内容で、メッセージの通知テストを行う場合は、:guilabel:`通知テスト` ボタンを押下して、メッセージ通知を確認できます。
      | :guilabel:`通知テスト` ボタン押下後、確認画面が表示され、応答後、メッセージが指定された通知先に送信されます。
      | 送信されるタイトル・本文は"notification test"となります。

   |


通知先設定編集
--------------

| 通知先設定の編集は、下記の手順で行ないます。

#. | Exastro システムにオーガナイゼーション管理者でログインします。
#. | メニューより :menuselection:`通知管理` をクリックします。

   .. figure:: /images/ja/manuals/platform/platform_menu.png
      :width: 200px
      :align: left

#. | :menuselection:`通知先ワークスペース一覧` 画面が表示されるので、通知先設定の編集を行いたいワークスペースを選択、または :guilabel:`通知先設定` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先ワークスペース一覧画面.png
      :width: 600px
      :align: left

   .. note:: | アクセス権限のあるワークスペースのみ表示されます。

#. | :menuselection:`通知先設定一覧` 画面が表示されるので、 :guilabel:`編集` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定一覧画面_edit_v2-7.png
      :width: 600px
      :align: left

#. | :menuselection:`通知先設定編集` 画面が表示されるので、通知先の情報を編集し、 :guilabel:`登録` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/編集通知先設定画面_Mail_v2-7.png
      :width: 600px
      :align: left

   |
   
   .. list-table:: 通知先設定編集
      :widths: 30 70
      :header-rows: 1
      :align: left

      * - 項目名
        - 説明
      * - | 通知先ID
        - | 通知先IDは変更出来ません。
      * - | 通知先名
        - | 通知先に割り当てる名前を指定します。
      * - | 通知方法
        - | 通知方法を指定します。
      * - | 通知先
        - | 指定した通知方法によって設定が異なります。
          | 詳細は :ref:`notification_entry` を参照ください。

   |

通知先設定削除
--------------

#. | Exastro システムにオーガナイゼーション管理者でログインします。
#. | メニューより :menuselection:`通知管理` をクリックします。

   .. figure:: /images/ja/manuals/platform/platform_menu.png
      :width: 200px
      :align: left

#. | :menuselection:`通知先ワークスペース一覧` 画面が表示されるので、通知先設定の編集を行いたいワークスペースを選択、または :guilabel:`通知先設定` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先ワークスペース一覧画面.png
      :width: 600px
      :align: left

   .. note:: | アクセス権限のあるワークスペースのみ表示されます。

#. | :menuselection:`通知先設定一覧` 画面が表示されるので、 :guilabel:`削除` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定一覧画面_delete_v2-7.png
      :width: 600px
      :align: left

#. | 確認メッセージが表示されるので、:kbd:`ワークスペースID/通知先ID` を入力し、 :guilabel:`はい、削除します` をクリックします。

   .. figure:: /images/ja/manuals/platform/notification/通知先設定削除実行確認画面.png
      :width: 600px
      :align: left

   .. tip::
      | 一度削除した通知先設定を復元することは出来ません。
